# goit-pythonweb-hw-012

./: .env.example  README.md  docker-compose.yaml  main.py  pyproject.toml  pytest.ini
docs/: conf.py  index.rst  mock_config.py
docs/modules/: auth.rst  cache.rst  cloudinary.rst  email.rst  features.rst  main.rst
migrations/versions/: 849b7bbd793e_add_password_reset_token.py  e71ab4e80276_add_user_role.py
src/auth/: contact_schema.py  contacts_repository.py  hash.py
src/cache/: cache_service.py
src/config/: config.py
src/database/: db.py
src/database/models/: contacts_model.py
src/email/templates/: reset_password.html
src/features/auth/: auth_controller.py  auth_service.py
src/features/auth/schema/: login_schema.py  password_set_schema.py
src/features/contacts/: contacts_controller.py  contacts_service.py
tests/: README.md  conftest.py  conftest_integration_backup.py  test_auth_controller_integration.py  test_auth_integration.py  test_contacts_controller_integration.py  test_contacts_integration.py  test_contacts_repository.py
