[project]
name = "goit-pythonweb-hw-10"
version = "0.1.0"
package-mode = false
description = ""
authors = [
    {name = "Eugene Asaulyak",email = "eugene.asaulyak@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "libgravatar (>=1.0.4,<2.0.0)",
    "python-dotenv (>=1.1.0,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "fastapi-mail (>=1.5.0,<2.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "cloudinary (>=1.44.0,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=6.2.0,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "httpx (>=0.27.0,<0.28.0)",
    "pytest-mock (>=3.14.0,<4.0.0)",
    "aiosqlite (>=0.20.0,<0.21.0)",
    "pytest-cov (>=6.2.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sphinx = "^8.2.3"

